Fix error boxes RHS alignment #87

--- a/_sass/_layout.sass
+++ b/_sass/_layout.sass
@@ -51,6 +51,9 @@ body
 .col-2-3
   @include grid-x-percent(66.666%)
 
+.col-full
+  @include grid-x-percent(100%)
+
 
 .youtube
   @include block
